UI Fix for calendar
Fix when screen too short

--- a/frontend/src/components/MainComponent.css
+++ b/frontend/src/components/MainComponent.css
@@ -42,14 +42,16 @@
     width: 100%;
     max-height: 100%;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
+    overflow-y: auto;
 }
 
 .calendar-div > div {
     width: 95%;
-    height: 95%;
+    height: 100%;
     border-radius: 20px;
+    min-height: 800px;
 }
 
 button {
