--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -61,7 +61,7 @@ img {
 }
 
 ::-webkit-scrollbar {
-    width: 0.7em;
+    width: 0.5em;
 }
 
 ::-webkit-scrollbar-track {
